Fix marquee overflowing

--- a/home.css
+++ b/home.css
@@ -71,8 +71,6 @@ body>header {                   /*Hero styling*/
 
 .notifications {
     margin: 0 10px 0 0;
-    height: max(var(--carousel-height), 400px);
-    max-height: 100vh;
 }
 
 .notifications__heading {
